welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:53: error: ';' expected but '(' found.
	gauche();
              ^